--- a/src/blog-content/2.md
+++ b/src/blog-content/2.md
@@ -3,8 +3,8 @@ title: Society Hall
 date: 2024-09-28
 ---
 
-Andrew Dickinson White, a co-founder of Cornell, proposed a great facility to host Cornellian literary societies. A facility called Society Hall. Literary societies were the business clubs of the day. The Irving and Philaletheian were the two most elite ones while the Adelphi and Curtis fed into the top two. Club recruitment doesn't seem to be a modern illness.
-
-A large room in the central door of North University (renamed White Hall in 1883) was chosen for the spot—the final building on Stone Row. The "beautifully furnished" room had nine Parisian full-length bronze statuettes: of Washington, Franklin, Shakespeare, Newton, Moliere, Goethe, Cervantes, Dante and Michelangelo. In between them were stunning impressions depicting important scenes in the history of America and other countries. 
-
-Where is this room now? [Wikipedia](https://en.wikipedia.org/wiki/Cornell_literary_societies) says it was originally in Room M, North University, later called White 10. But the Hall today, fully interior renovated in 2003, only has rooms numbered in the 100s. And room 110 is a random classroom. Hmm. The floor below and the floor above have nothing either. This feels much like the Room of Requirements. Where is this room?!
+Andrew Dickinson White, a co-founder of Cornell, proposed a great facility to host Cornellian literary societies. A facility called Society Hall. Literary societies were the business clubs of the day. The Irving and Philaletheian were the two most elite ones while the Adelphi and Curtis fed into the top two. Club recruitment doesn't seem to be a modern illness.\
+\
+A large room in the central door of North University (renamed White Hall in 1883) was chosen for the spot—the final building on Stone Row. The "beautifully furnished" room had nine Parisian full-length bronze statuettes: of Washington, Franklin, Shakespeare, Newton, Moliere, Goethe, Cervantes, Dante and Michelangelo. In between them were stunning impressions depicting important scenes in the history of America and other countries. \
+\
+Where is this room now? [Wikipedia](https://en.wikipedia.org/wiki/Cornell_literary_societies) says it was originally in Room M, North University, later called White 10. But the Hall today, fully interior renovated in 2003, only has rooms numbered in the 100s. And room 110 is a random classroom. Hmm. The floor below and the floor above have nothing either. Is this the Room of Requirements? *Where is this room?!*
