--- a/src/blog-content/3.md
+++ b/src/blog-content/3.md
@@ -3,8 +3,8 @@ title: Statues
 date: 2024-10-04
 ---
 
-I talked of *Society Hall* in my last post which held statues of Washington, Franklin, Shakespeare, Newton, Moliere, Goethe, Cervantes, Dante and Michelangelo. I still can't find the room. But I was walking through Uris Library the other day after getting kicked out for staying too late and saw a marble statue of Lincoln. There were also a few statues in the background of the interm-president's office. Unfortunately I didn't break in—I saw them in a Daily Sun article introducing him after his appointment a few months ago.
-
-I wonder if the statues from Society Hall were dispersed throughout campus. That would be a cool treasure hunt. Like Risley, Uris has a ton of hidden rooms, some of which you can only find if you want to find them. Remind you of anything? Fits the theme. That may or may not be made up, find out for yourself.
-
+I talked of *Society Hall* in my last post which held statues of Washington, Franklin, Shakespeare, Newton, Moliere, Goethe, Cervantes, Dante and Michelangelo. I still can't find the room. But I was walking through Uris Library the other day after getting kicked out for staying too late and saw a marble statue of Lincoln. There were also a few statues in the background of the interm-president's office. Unfortunately I didn't break in—I saw them in a Daily Sun article introducing him after his appointment a few months ago.\
+\
+I wonder if the statues from Society Hall were dispersed throughout campus. That would be a cool treasure hunt. Like Risley, Uris has a ton of hidden rooms, some of which you can only find if you want to find them. Remind you of anything? Fits the theme. That may or may not be made up, find out for yourself.\
+\
 I'm also trying to find the underground tunnels under the Ag Quad if they even exist. This is what happens when you aren't grinding for summer banking positions. 
