--- a/src/blog-content/2.md
+++ b/src/blog-content/2.md
@@ -3,7 +3,7 @@ title: Society Hall
 date: 2024-09-28
 ---
 
-Andrew Dickinson White, a co-founder of Cornell, proposed a great facility to host Cornellian literary societies. A facility called Society Hall. Literary societies were the business clubs of the day. The Irving and Philaletheian were the two most elite ones while the Adelphi and Curtis fed into the top two. Club recruitment doesn't seem to be a modern illness.\
+Andrew Dickson White, a co-founder of Cornell, proposed a great facility to host Cornellian literary societies. A facility called Society Hall. Literary societies were the business clubs of the day. The Irving and Philaletheian were the two most elite ones while the Adelphi and Curtis fed into the top two. Club recruitment doesn't seem to be a modern illness.\
 \
 A large room in the central door of North University (renamed White Hall in 1883) was chosen for the spot—the final building on Stone Row. The "beautifully furnished" room had nine Parisian full-length bronze statuettes: of Washington, Franklin, Shakespeare, Newton, Moliere, Goethe, Cervantes, Dante and Michelangelo. In between them were stunning impressions depicting important scenes in the history of America and other countries. \
 \
