test with public

--- a/src/blog-content/5.md
+++ b/src/blog-content/5.md
@@ -13,7 +13,7 @@ But as AI agents start entering our lives in small ways, from summarizing import
 If I want to order a chalupa from Taco Bell, why do I need to click 20 things to place an order? Why can't I just text "order a chalupa" to my agent? Even though the future may look like that, the medium of the Internet is far from supporting it.\
 \
 If you were to place an order on DoorDash today, the flow would look like this:\
-![mis](/image.png)
+![mis](/public/image.png)
 \
 An AI agent would make things easier:
 \
