using static git img storage IT WORKED

--- a/src/blog-content/5.md
+++ b/src/blog-content/5.md
@@ -17,15 +17,15 @@ If you were to place an order on DoorDash today, the flow would look like this:\
 \
 An AI agent would make things easier:
 \
-![mis](/image2.png)
+![mis](https://github.com/user-attachments/assets/63de0927-c100-4305-8481-c98801628397)
 \
 It should look like this:\
 \
-![mis](/image3.png)
+![mis](https://github.com/user-attachments/assets/cdb8e64e-8451-4680-8763-5b725d2e0f8a)
 \
 At some point, it may even look like this:\
 \
-![mis](/image4.png)
+![mis](https://github.com/user-attachments/assets/6ce9cbcc-f886-4e4b-9679-b805e4dcb1c8)
 \
 If that plays out, I may wake up to 1000 chalupas at 2 am. That may not be a bad thing. My wallet would disagree.\
 \
