--- a/src/blog-content/5.md
+++ b/src/blog-content/5.md
@@ -19,11 +19,11 @@ An AI agent would make things easier:
 \
 ![mis](https://github.com/user-attachments/assets/63de0927-c100-4305-8481-c98801628397)
 \
-It should look like this:\
+It should look like this:
 \
 ![mis](https://github.com/user-attachments/assets/cdb8e64e-8451-4680-8763-5b725d2e0f8a)
 \
-At some point, it may even look like this:\
+At some point, it may even look like this:
 \
 ![mis](https://github.com/user-attachments/assets/6ce9cbcc-f886-4e4b-9679-b805e4dcb1c8)
 \
