Add names bc fuck it

--- a/src/blog-content/5.md
+++ b/src/blog-content/5.md
@@ -6,7 +6,7 @@ date: 2024-10-16
 \
 I was thinking about how we'll interact with the Internet in the future and I'm realizing that it is completely going to change. The Internet, born in 1983, is entering its mid-life crisis phase—but rather than dropping its job to pursue self-enlightenment, it's going to spiritually transform in other ways.\
 \
-We traverse the Internet via the World Wide Web, webpages rendered on our browsers,  designed for humans to read. The pages have flashy Hero sections, beautiful animations, and optimized flows that were the result of hours of UX tweaking. I know this well: I spent hours changing the headline of a [page](https://coldcraft.ai/) at 2am the other day with a friend—just the headline!—because it results in real user growth. It's insane.\
+We traverse the Internet via the World Wide Web, webpages rendered on our browsers,  designed for humans to read. The pages have flashy Hero sections, beautiful animations, and optimized flows that were the result of hours of UX tweaking. I know this well: I spent hours changing the headline of a [page](https://coldcraft.ai/) at 2am the other day with Rohan—just the headline!—because it results in real user growth. It's insane.\
 \
 But as AI agents start entering our lives in small ways, from summarizing important information (Google AI Overview) and aiding in financial research ([Perplexity Finance](https://x.com/AravSrinivas/status/1846289701822677441) announced today) to ordering DoorDash ([MultiOn Agent](https://www.youtube.com/watch?v=iVNgB9sRt78&ab_channel=MultiOn)) they will quickly replace some of the most tedious aspects of the web.\
 \
