--- a/src/blog-content/6.md
+++ b/src/blog-content/6.md
@@ -4,7 +4,7 @@ date: 2024-10-28
 ---
 I went to Yale's annual hackathon a few weekends ago. I did absolutely no "hacking" unless you count rewatching *The Social Network* ELO algorithm scene 20 times.\
 \
-Will and I met a ton of people while we were scouring for Celsii (>1 Celsius) and we retreated to a room with a chess set. While playing a game, we met a few Yalies and they tempted us with a proposition. Ditch the hackathon and just meet cool people. We decided to follow them around campus. Compared to Ithaca, New Haven seemed like utopia.\
+Will and I met a ton of people while we were scouring for Celsii (many Celsius's) and we retreated to a room with a chess set. While playing a game, we met a few Yalies and they tempted us with a proposition. Ditch the hackathon and just meet cool people. We decided to follow them around campus. Compared to Ithaca, New Haven seemed like utopia.\
 \
 People were actually outside chilling. It's crazy. Even a few CS majors we met weren't worried about recruiting. Everything came to them like they were bears in a river waiting for salmon. We felt like the salmon.\
 \
