--- a/src/blog-content/6.md
+++ b/src/blog-content/6.md
@@ -8,6 +8,6 @@ Will and I met a ton of people while we were scouring for Celsii (many Celsius's
 \
 People were actually outside chilling. It's crazy. Even a few CS majors we met weren't worried about recruiting. Everything came to them like they were bears in a river waiting for salmon. We felt like the salmon.\
 \
-I lost a game of cornhole in Saybrook and saw happy faces. The night began with a student band playing the Arctic Monkey's Arabella (giving me an unsolicited reminder of high school) and pumpkin spiced Eden and ended with a castle siege with minor casualties. Don't ask.\
+I lost a game of cornhole in Saybrook and saw happy faces. The night went from a student band playing the Arctic Monkey's Arabella (giving me an unsolicited reminder of high school) and pumpkin spiced Eden to a castle siege with minor casualties. Don't ask.\
 \
 Chance decisions lead to crazy outcomes. I don't know why we didn't do the hackathon but it seemed to work out. My big takeaway is always look for Celsii.
