--- a/src/blog-content/7.md
+++ b/src/blog-content/7.md
@@ -13,4 +13,4 @@ In a conversation with Jenny yesterday, it became clear to represent this in the
 \
 ![mis](https://github.com/user-attachments/assets/1229f101-e19b-4f3c-8ed5-7383febf095f)
 \
-*Il Pentamerone*, the main inspiration for the Brothers Grimm, was significantly influenced by oral folk tales, but was also influenced by the town of Naples, since it was one of the most important hubs in the region. Parent nodes are influenced at varying degrees by their derivative nodes, and I think a [small minority of nodes have a disproportionately influential impact](https://en.wikipedia.org/wiki/Pareto_principle) on the parent. (Pareto principle) If the most important derivative nodes are highlighted as you go back in time, a single situation's effects, like a cavewoman losing her slipper, can be traced all the way to Cinderella. Or maybe a Quixotic brute caveman to Shrek. This intergenerational butterfly effect makes me wonder what mundane thing I did today will lead to an epic tale hundreds of years from now.
+*Il Pentamerone*, the main inspiration for the Brothers Grimm, was significantly influenced by oral folk tales, but was also influenced by the town of Naples, since it was one of the most important hubs in the region. Parent nodes are influenced at varying degrees by their derivative nodes, and I think a [small minority of derivative nodes have a disproportionately influential impact](https://en.wikipedia.org/wiki/Pareto_principle) on the parent. If the most important derivative nodes are highlighted as you go back in time, a single situation's effects, like a cavewoman losing her slipper, can be traced all the way to Cinderella. Or maybe a Quixotic brute caveman to Shrek. This intergenerational butterfly effect makes me wonder what mundane thing I did today will lead to an epic tale hundreds of years from now.
