--- a/src/blog-content/9.md
+++ b/src/blog-content/9.md
@@ -1,5 +1,5 @@
 ---
-title: Cornell: Caution tape
+title: "Cornell: Caution tape"
 date: 2024-11-07
 ---
 I'm walking on the (somewhat) secret path behind Mann Library and I see a [Genie S-86 XC](https://shop.atlastoyota.com/dual-capacity-telescopic-boom-lift-86-91-s-85-xc/) blocking my path. People in high-vis vests look at me as they put up bright-yellow CAUTION tape. A girl is walking towards me. As I walk forward, I try ducking under the tape, kind of like an inverse hurdle, and make it under easily, but my backpack gets caught. I almost fall on my face. I look around to see if people saw, and everyone is looking at me. *Fuck.* I thought my backpack was ready for any type of parkour but a carabiner I added as a remnant from my scouting days perfectly latches around the tape and secures me to it. I'm held back as I try fleeing the scene.\
