--- a/src/blog-content/10.md
+++ b/src/blog-content/10.md
@@ -2,7 +2,7 @@
 title: Lingo
 date: 2024-11-13
 ---
-I was talking to Simon a few days ago about lingo people use, often acting as a differentiator between groups. Coders recognize "[foobar](https://en.wikipedia.org/wiki/List_of_military_slang_terms#FUBAR)." Surfers call anything "gnarly." Climbers love to give you the "beta." True "Cornellians" skip "prelims" to make fun of "hotelies" in front of "Louies" and debate what's more expensive: a "hot" or a "fat." "Ifykyk."\
+I was talking to Simon a few days ago about lingo people use, which often acts as a differentiator between groups. Coders recognize "[foobar](https://en.wikipedia.org/wiki/List_of_military_slang_terms#FUBAR)." Surfers call anything "gnarly." Climbers love to give you the "beta." True "Cornellians" skip "prelims" to make fun of "hotelies" in front of "Louies" and debate what's more expensive: a "hot" or a "fat." "Ifykyk."\
 \
 This type of jargon seems to pop up organically, especially in [small concentrated groups](http://tmrc-www.mit.edu/old/dictionary.html). The social network effect is strong: the more people adopt it, the more it gets used by others. The lingo can strengthen the network, keeping people from leaving and tempting people outside of the network to join because of the FOMO. Thriving groups have a ton of in-group verbiage but it seems hard to artificially create.\
 \
