floating point aesthetics

--- a/src/blog-content/15.md
+++ b/src/blog-content/15.md
@@ -42,7 +42,7 @@ At Armada, we spent hours thinking about how to organize a hackathon event where
 
 ![brain_4](https://github.com/user-attachments/assets/1cbdcf36-3e58-4524-8b88-6d0fc76f227a)
 
-Along with the brain and the body (biological peripheral tissue), there is a new (there for 0.0000075% of human evolution) layer, *artificial peripheral tissue*. We treat this stuff the same way we treat our body parts, relying on it for daily tasks. We feel like shit when it stops working (spraining your ankle ~= wifi is dead // shin splints means I can't run for a week ~= ChatGPT is down so I can't write for a week). And over time, I expect this layer to become increasingly important, possibly even eclipsing the biological peripheral tissue at some point.
+Along with the brain and the body (biological peripheral tissue), there is a new (there for .0000075% of human evolution) layer, *artificial peripheral tissue*. We treat this stuff the same way we treat our body parts, relying on it for daily tasks. We feel like shit when it stops working (spraining your ankle ~= wifi is dead // shin splints means I can't run for a week ~= ChatGPT is down so I can't write for a week). And over time, I expect this layer to become increasingly important, possibly even eclipsing the biological peripheral tissue at some point.
 
 This raises a ton of cool questions, but the one I find most interesting is something that was revealed to me with deep introspection on Eddy Street. People have been thinking about the sense of Self—is it just one person in you or is there a devil on your left shoulder and an angel on your right? Freud and Plato's models of consciousness speak the most to me. 
 
