--- a/src/blog-content/15.md
+++ b/src/blog-content/15.md
@@ -54,8 +54,8 @@ Without knowing this stuff, I recreated the tripartite structure, but slightly d
 
 ![brain_6](https://github.com/user-attachments/assets/256c0201-5dbe-49f1-bb3f-8f96b800a7c0)
 
-It was clear that my base Self aligns with the *superego* with a hint of *thumos*, with strong domination by the *id*/*epithumos*. The *ego*/*logos* is superior but dominates very inconsistently. If our mind is made up of three actors, what happens when we introduce the fourth — an AI via a BCI? I represent this as purple.
+It was clear that my base Self aligns with the *superego* with a hint of *thumos*, with strong domination by the *id/epithumos*. The *ego/logos* is superior but dominates very inconsistently. If our mind is made up of three actors, what happens when we introduce the fourth — an AI via a BCI? I represent this as purple.
 
 ![brain_7](https://github.com/user-attachments/assets/e50d32a8-5958-45da-a341-6774a6033d63)
 
-In the left-most image, the logos dominates over the AI but the AI stays superior over the other two agents. At least one part our brain keep the AI in check. But the AI could also dominate (middle) or become the mind's sense of Self (right-most). That presents insane implications for biological-digital cyborgs (us) as the artificial layer gets more and more significant. I definitely need to think about this more.
+In the left-most image, the *logos* dominates over the AI but the AI stays superior over the other two agents. At least one part of our brain keep the AI in check. But the AI could also dominate (middle) or become the mind's sense of Self (right-most). That presents insane implications for biological-digital cyborgs (us) as the artificial peripheral tissue layer gets more and more significant. I definitely need to think about this more.
