--- a/src/blog-content/15.md
+++ b/src/blog-content/15.md
@@ -6,7 +6,7 @@ I thought the brain was just the body of mass in your head until a few days ago.
 
 ![mis](https://github.com/user-attachments/assets/f358776a-0ac6-404f-a1da-f490c5fd432b)
 
-The cerebrum and cerebellum are the actual brain in our skull, and the brainstem connects it to the spinal cord that goes all the way down your body, making up the central nervous system (CNS). But the peripheral nervous system—made up of the spinal and autonomic plexuses and nerves fill the rest of our body, making up the true brain. Information is gathered across your entire body and through sensory receptors—eyes, nose, ears, etc.—and sent to the CNS. The CNS responds by commanding muscles, organs, sensory receptors, glands, blood vessels, etc. 
+The cerebrum and cerebellum are the actual brain in our skull, and the brainstem connects it to the spinal cord that goes all the way down your body, making up the central nervous system (CNS). But the peripheral nervous system—made up of the spinal and autonomic plexuses and nerves—fill the rest of our body, making up the true brain. Information is gathered across your entire body and through sensory receptors—eyes, nose, ears, etc.—and sent to the CNS. The CNS responds by commanding muscles, organs, sensory receptors, glands, blood vessels, etc. 
 
 This input/output process is done through the somatic and autonomic nervous system. Sensory neurons carry afferent signals (inputs) and motor neurons carry efferent signals (outputs)
 
