--- a/src/blog-content/16.md
+++ b/src/blog-content/16.md
@@ -1,6 +1,6 @@
 ---
 title: The Case for Protesting
-date: 2024-12-15
+date: 2024-12-17
 ---
 I've never participated in a real protest, unless you count the gun-violence protests in middle school after the [Parkland shooting](https://en.wikipedia.org/wiki/Parkland_high_school_shooting). If I stayed in class during the protest, I'd be left alone with my Algebra teacher. If I left, I'd get to hang out with my friends and feel a sense of rebellion. It was an easy choice.
 
@@ -9,8 +9,8 @@ I've always thought it was better to keep the fight off the streets and in the b
 The thought process behind participating in protests seems to be largely emotional (if you care about the issue) and social (if your friends care/are going to it). Maybe more social groupthink, but both feed into each other, as shown during the George Floyd protests. But the payoffs of the act of protesting—from a collective perspective—seem clear.
 
 If a protest happens, you might have this thought process:
-**Downside:** You waste a few hours attending the protest and some effort making a poster. You might even get arrested and spend a night in jail.
-**Upside:** Your protest is covered in the news, bringing awareness to the issue, political change is much more likely than if you did nothing, and more people are brought into the movement, increasing funding and support. 
+- **Downside:** You waste a few hours attending the protest and some effort making a poster. You might even get arrested and spend a night in jail.
+- **Upside:** Your protest is covered in the news, bringing awareness to the issue, political change is much more likely than if you did nothing, and more people are brought into the movement, increasing funding and support. 
 
 If everyone has that mentality, then the protest would be much larger, since—at worst—a night in jail is well worth the potential upsides. Larger protests are more successful. The upside scales exponentially as a function of people believing in this framework. As it gets larger, the upsides become more and more probable.
 
