--- a/src/blog-content/18.md
+++ b/src/blog-content/18.md
@@ -1,6 +1,9 @@
 ---
 title: Privacy Dissonance
 date: 2024-12-18
+headerImage: /Screenshot 2024-12-18 at 10.15.54 PM.png
+imageAuthor: Les Distractions de Dagobert, Leonora Carrington
+imageLink: https://www.sothebys.com/en/buy/auction/2024/modern-evening-auction/les-distractions-de-dagobert
 ---
 In September 2006, Mark Zuckerberg released something that would completely change Facebook—a Feed. You could now see if your friend got dumped by his girlfriend or if someone you met last night posted a photo of you (w/ someone else) that was supposed to stay under lock and key.
 
