--- a/src/blog-content/18.md
+++ b/src/blog-content/18.md
@@ -1,7 +1,7 @@
 ---
 title: Privacy Dissonance
 date: 2024-12-18
-headerImage: /Screenshot 2024-12-18 at 10.15.54 PM.png
+headerImage: /privacy_img
 imageAuthor: Les Distractions de Dagobert, Leonora Carrington
 imageLink: https://www.sothebys.com/en/buy/auction/2024/modern-evening-auction/les-distractions-de-dagobert
 ---
