github link :( embarrassing i cant even locally host imgs

--- a/src/blog-content/18.md
+++ b/src/blog-content/18.md
@@ -1,7 +1,7 @@
 ---
 title: Privacy Dissonance
 date: 2024-12-18
-headerImage: /images/privacy.jpg
+headerImage: https://github.com/user-attachments/assets/313916f0-9cd7-4761-817d-1f78cd6a6956
 imageAuthor: Les Distractions de Dagobert, Leonora Carrington
 imageLink: https://www.sothebys.com/en/buy/auction/2024/modern-evening-auction/les-distractions-de-dagobert
 ---
