--- a/src/blog-content/19.md
+++ b/src/blog-content/19.md
@@ -1,6 +1,10 @@
 ---
 title: "Cornell: Plein-Air Snow"
 date: 2024-12-22
+headerImage: /snow.png
+imageAuthor: Rum Runner (To the Westward), Andrew Wyeth
+imageLink: https://www.sothebys.com/en/buy/auction/2024/modern-evening-auction/rum-runner
+
 ---
 I am watching a [painting en plein air](https://youtu.be/1M_BSbHRfwY?si=vowC6sgvoIzkeh9J) in my dorm alone wishing I was in Pacifica. Everyone has gone home. You would expect everything to be grey. Grey buildings. Grey dining halls. Grey libraries. Grey dorms. But everything is more beautiful than ever.
 
