url markdown mess up

--- a/src/blog-content/21.md
+++ b/src/blog-content/21.md
@@ -1,7 +1,7 @@
 ---
 title: Smart(er) Contracts
 date: 2024-12-30
-headerImage: /taste.png
+headerImage: /contract.png
 imageAuthor: The Morning Tribute, Jean Antoine Laurent
 imageLink: https://www.sothebys.com/en/buy/auction/2024/tableaux-et-dessins-1400-1900-incluant-des-oeuvres-dune-importante-collection-privee-symboliste/the-morning-tribute?locale=en
 ---
