--- a/src/blog-content/21.md
+++ b/src/blog-content/21.md
@@ -11,7 +11,7 @@ I wouldn't consider them smart since they're fully deterministic—a contract wi
 
 For example, imagine you are looking for a logo for your new company and find a designer online. Since the designer has been screwed over by clients in the past, they set up a smart contract. The guidelines are: (1) The logo must adhere to the provided brand guidelines, (2) The logo must be a high quality .svg file with a full branding kit, (3) All content must be submitted by a set date unless both parties agree to postpone to a later date, and (4) The contract will be paid out by a supermajority vote of 100 Llama3 agents which receive the brand guidelines and all submission content. Both parties hire a Web3 developer to write up the smart contract and they agree to it. Once the designer completes and submits the work, the senate approves it, and the designer is immediately paid out (1 second after they submit) and the client receives the work. If the client is not satisfied with the work, they can submit an appeal and have a human court see if the designer truly met the stated guidelines of the project. This would be completely impossible with a current "smart" contract.
 
-There are a ton of concerns with this kind of system, everything from prompt injection attacks in the submitted work telling the senate to vote a certain way on the vote to the designer heavily optimizing for the contract's guidelines, resulting in an inferior product. Someone could just hack together a script that creates AI agents that makes logos using Midjourney and submits them to smart contracts, continuously iterating until the senate is brute forced. Assuming a large marketplace of contracts, this could net millions in seconds. I think many of those errors can be fixed as LLMs improve and LLM detection mechanisms improve. 
+There are a ton of concerns with this kind of system, everything from prompt injection attacks in the submitted work engineering the senate to vote a certain way to the designer heavily optimizing for the contract's guidelines, resulting in an inferior product. Someone could just hack together a script that creates AI agents that makes logos using Midjourney and submits them to smart contracts, continuously iterating the logos until the senate vote is brute forced. Assuming a liquid marketplace of contracts, this could net millions in seconds. I think many of those errors can be fixed as LLMs improve and LLM detection mechanisms improve. 
 
 The largest concern I see is: will a senate made up of LLM (synthetic) agents result in rational outcomes? The ideal judicial body is as close to deterministic as possible but that is just not true in real life. On the day after daylight savings eliminates an hour of sleep, judges hand out longer sentences to defendants. Judges grant parole significantly more [right after lunch](https://en.wikipedia.org/wiki/Hungry_judge_effect#:~:text=Original%20study,-A%20study%20of&text=It%20found%20that%20the%20granting,zero%20before%20a%20meal%20break.) or snack breaks, when they're well-fed. I'd consider college admissions officers as "judges" too, and when they hold a warm drink, they tend to describe candidates as "warmer." Given these cognitive/behavioral biases and the large pool of these quirks that we have not discovered yet, I don't even know how we trust judicial systems with humans in them. At least we can edit the training data for a senate LLM to be less biased (to an extent).
 
