--- a/src/blog-content/21.md
+++ b/src/blog-content/21.md
@@ -7,7 +7,7 @@ imageLink: https://www.sothebys.com/en/buy/auction/2024/tableaux-et-dessins-1400
 ---
 Are [smart contracts](https://www.fon.hum.uva.nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo.best.vwh.net/smart_contracts_2.html) really smart? They're a "set of promises, specified in digital form, including protocols within which the parties perform on these promises." A smart contract is just a chunk of code that binds two parties to an agreement and executes a conditional based on data concerning the agreement. Do we call them *smart* because they're code and not a natural language contract (with an enforcement mechanism)? Both are arguably as obfuscated; what's easier to read: Solidity or legalese? 
 
-I wouldn't consider them smart since they're fully deterministic—a contract with a certain set of conditions will always map to the same output given the same inputs. Something smart has some reasoning capability. This restricts "smart" contracts to a subset of contracts that don't require subjective interpretation, real-world events (unless there is an oracle, which have their own issues), privacy/confidential information contained in the contract (since the contract is on-chain once agreed upon), etc. Instead, what if you had a arbitration element in the contract made up of a synthetic senate (LLMs) that *voted* based on the data provided by both parties and oracles and made an assessment. An appeals court (made up of [real people](https://kleros.io/)) would be there if one party truly believes the synthetic jury came to the wrong decision. 
+I wouldn't consider them smart since they're fully deterministic—a contract with a certain set of conditions will always map to the same output given the same inputs. Something *smart* must has some reasoning capability. This restricts "smart" contracts to a subset of contracts that do not require subjective interpretation, rely real-world events (unless there is an oracle, which have their own issues), or contain privacy/confidential information in the contract (since the contract is publicly on-chain once agreed upon), etc. Instead, what if you had a arbitration element in the contract made up of a synthetic senate (LLMs) that *voted* based on the data provided by both parties and oracles and made an assessment. An appeals court (made up of [real people](https://kleros.io/)) would be there if one party truly believes the synthetic jury came to the wrong decision. 
 
 For example, imagine you are looking for a logo for your new company and find a designer online. Since the designer has been screwed over by clients in the past, they set up a smart contract. The guidelines are: (1) The logo must adhere to the provided brand guidelines, (2) The logo must be a high quality .svg file with a full branding kit, (3) All content must be submitted by a set date unless both parties agree to postpone to a later date, and (4) The contract will be paid out by a supermajority vote of 100 Llama3 agents which receive the brand guidelines and all submission content. Both parties hire a Web3 developer to write up the smart contract and they agree to it. Once the designer completes and submits the work, the senate approves it, and the designer is immediately paid out (1 second after they submit) and the client receives the work. If the client is not satisfied with the work, they can submit an appeal and have a human court see if the designer truly met the stated guidelines of the project. This would be completely impossible with a current "smart" contract.
 
