changed img bc better

--- a/src/blog-content/22.md
+++ b/src/blog-content/22.md
@@ -2,8 +2,8 @@
 title: Constitutional Dictator
 date: 2025-01-10
 headerImage: /dictator.png
-imageAuthor: Garden Party, Salman Toor
-imageLink: https://www.sothebys.com/en/buy/auction/2021/contemporary-art-evening-auction-2/garden-party-2
+imageAuthor: Untitled (Self-portrait), Marwan Kassab-Bachi
+imageLink: https://www.artsy.net/artwork/marwan-marwan-kassab-bachi-untitled-self-portrait
 ---
 When Lincoln suspended *habeas corpus* and the liberty of speech and press during the Civil War, he argued that it was necessary to preserve the union. His administration shut down newspapers, arrested editors, even sent electors to prison right before key votes. The courts thought he [went too far](https://en.wikipedia.org/wiki/Ex_parte_Milligan) after the fact.
 
