--- a/src/blog-content/22.md
+++ b/src/blog-content/22.md
@@ -11,7 +11,7 @@ When Biden "asked" social media companies to censor anti-vaccine information dur
 
 It is generally agreed that extreme actions may be [necessary during War](https://www.congress.gov/bill/107th-congress/house-joint-resolution/114/text)—a time where national security is at risk. The Constitution doesn't give the president extra power during times of emergency but [statute and precedence supports it](https://www.law.cornell.edu/uscode/text/50/1621) as long as the president is transparent about the emergency to Congress. (Unlike Lincoln, who didn't give a fuck) Anything should be possible if the life of the country or citizenry is at stake, right? Lincoln even argued that breaking a foundational law is okay if it was *necessary* to save the rest—no laws would exist if a country didn't exist. And he autocratically defined what was necessary.
 
-Biden declared a [national emergency](https://www.whitehouse.gov/briefing-room/presidential-actions/2023/02/10/notice-on-the-continuation-of-the-national-emergency-concerning-the-coronavirus-disease-2019-covid-19-pandemic-3/) as the pandemic was accelerating. He used his "emergency powers" under statute to direct federal resources and waive healthcare regulations. The censorship came extrastatutorally via "government recommendations", a legal grey-area which coupled with coercion, would qualify under a special designation: "sus". 
+Trump declared a [national emergency](https://www.whitehouse.gov/briefing-room/presidential-actions/2023/02/10/notice-on-the-continuation-of-the-national-emergency-concerning-the-coronavirus-disease-2019-covid-19-pandemic-3/) as the pandemic was accelerating. Biden used those "emergency powers" under statute to direct federal resources and waive healthcare regulations. The censorship came extrastatutorally via "government recommendations", a legal grey-area which coupled with coercion, would qualify under a special designation: "sus". 
 
 To justify his social media censorship, he has to make the argument that it was actually *necessary* to protect public health and national security. The Civil War resulted in 698,000 deaths, "America's bloodiest conflict", while the pandemic [killed](https://en.wikipedia.org/wiki/COVID-19_pandemic_in_the_United_States) 1.2 million Americans: easily passing the national emergency bar. 319,000 unvaccinated Americans [died in the pandemic](https://globalepidemics.org/vaccinations/) (3x WWI!)—many (arguably) the result of vaccine misinformation and stigma. [Foreign misinformation](https://www.nature.com/articles/s41599-024-03355-0) was so strong the WHO declared an "infodemic". His argument obviously has some merit, but the courts have pushed back *a posteriori*, [restricting the Biden administration](https://int.nyt.com/data/documenttools/injunction-in-missouri-et-al-v/7ba314723d052bc4/full.pdf) from communicating with social media companies regarding content moderation. (Three months after Biden ended the pandemic national emergency)
 
