--- a/src/blog-content/25.md
+++ b/src/blog-content/25.md
@@ -17,7 +17,7 @@ Non-founding executives and founding executives have contrasting dynamics. After
 
 Many founders start companies to get rich, others start it to solve an interesting problem, while a few set out to materialize their grand internal vision on the world map. A few understand something others don't. They understand long-term sacrifices with minimal profits (Amazon), tackling problems no one who understands conventional risk would tackle (SpaceX, Tesla). They command their boards to secure the life of their vision (Meta) and don't give a fuck how their employees feel about them (NVIDIA). They're willing to totally rearrange their companies and ditch their work-life balance for it (Airbnb). Most founders are not like that.
 
-The most transformative orgs can't afford to distribute power but **ever single one does**. All the executive *energy* is destroyed violating the second law of founding thermodynamics. As founders retire and die off, their crystal clear vision will get diluted to their successor, C-suite, board, and employees. As generations go on, the *vision entropy* compounds like a game of telephone. Out of the 500 founding companies of the S&P 500, started in 1957 (not that long ago), only [94 companies](https://rodneywhitecenter.wharton.upenn.edu/wp-content/uploads/2014/04/0429.pdf) survive. Just look at Apple's transition of Steve Jobs to Tim Cook. Revenue stayed strong but the innovation and risk-taking that Apple was known for has disappeared. Microsoft almost died out—only half a generation in—when Steve Ballmer took over. How many companies over 100 years old are still innovating? Coca-Cola? Boeing?
+The most transformative orgs can't afford to distribute power but **every single one does**. All the executive *energy* is destroyed, violating the second law of founding thermodynamics. As founders retire and die off, their crystal clear vision will get diluted to their successor, C-suite, board, and employees. As generations go on, the *vision entropy* compounds like a game of telephone. Out of the 500 founding companies of the S&P 500, started in 1957 (not that long ago), only [94 companies](https://rodneywhitecenter.wharton.upenn.edu/wp-content/uploads/2014/04/0429.pdf) survive. Just look at Apple's transition of Steve Jobs to Tim Cook. Revenue stayed strong but the innovation and risk-taking that Apple was known for has disappeared. Microsoft almost died out—only half a generation in—when Steve Ballmer took over. How many companies over 100 years old are still innovating? Coca-Cola? Boeing?
 
 The ideal succession scenario is: a strong-willed mission-driven executive passes the torch to someone else just like that. If that goes on for even one or two generations, the company can become one of the most influential companies on Earth. But if a founder designs their organizational structure to maximize their power and is succeeded by an MBA type, the company may do well for the first generation, but the next generation will quickly erase any gains made to the vision. (Assuming permanent executive concentration. Something like a founder holding onto voting rights and equity would be temporary since the next executive would not receive that). 
 
