Add new blog post: 27.md

--- a/src/blog-content/27.md
+++ b/src/blog-content/27.md
@@ -6,8 +6,8 @@ imageAuthor: Moses, Michelangelo
 imageLink: https://en.wikipedia.org/wiki/Moses_(Michelangelo)
 ---
 I interpret *founder-mode* as doing anything it takes to make the vision for your organization succeed. I prefer *prophet-mode*. Vibrationally aligning a team to as close to your frequency as possible and propagating your spiritual vision into the cosmos. 
-mos
-If your vision can be summed up as a group of information, its mapping to anyone around you reduces some of that information. Information is lost in translation. The less information is lost, the more aligned that person is with you, making them more likely to be driven to turn the object in your [metaphysical realm](realm of Forms) into the material realm.
+
+If your vision can be summed up as a group of information, its mapping to anyone around you reduces some of that information. Information is lost in translation. The less information is lost, the more aligned that person is with you, making them more likely to be driven to turn the object in your [metaphysical realm](https://en.wikipedia.org/wiki/Theory_of_forms) into the material realm.
 
 Everyone's conception of the object of your vision exists in a different metaphysical space. There may be heavy overlap, but perfect equality—where your metaphysical space and someone elses are the same; therefore, contain the same elements of information—is probably impossible unless deterministically coded. Information entropy increases exponentially as the number of degrees increase from the person with the vision to the person receiving the vision. 
 
