--- a/src/blog-content/27.md
+++ b/src/blog-content/27.md
@@ -11,4 +11,4 @@ If your vision can be summed up as a group of information, its mapping to anyone
 
 Everyone's conception of the object of your vision exists in a different metaphysical space. There may be heavy overlap, but perfect equality—where your metaphysical space and someone elses are the same; therefore, contain the same elements of information—is probably impossible unless deterministically coded. Information entropy increases exponentially as the number of degrees increase from the person with the vision to the person receiving the vision. 
 
-Moses receives the Law directly from God. We can assume this is zero-entropy transmission. The vision of Gold flowing through Moses -> elders -> people results in heavy information loss. Tablets, laws, commandments, and an entire cultural framework (priests, festivals, tabernacle) is produced to minimize entropy across spacetime. This is equivalent to a founder realizing that pure explanation isn't enough—they need mechanisms (company culture, processes, incentives, storytelling) to keep the vision intact. His successor, Joshua, carries the mission forward, but over generations, corruption and reinterpretation creep in, as expected. Looking at the many interpretations of that original vision today, it's obvious that vision dilution is inevitable but it is remarkable how strong a vision can be, vibrationally aligning the metaphysical plane of billions of people into unified behavioral patterns, which are an emergent effect of that lower-level alignment. What do you think a [reality-distortion field](https://en.wikipedia.org/wiki/Reality_distortion_field) really is—is the product of [Divine Law](https://en.wikipedia.org/wiki/Divine_law)?
+Moses receives the Law directly from God. We can assume this is zero-entropy transmission. The [vision of God](https://www.biblegateway.com/passage/?search=Exodus%2019-24&version=NIV) flowing through Moses -> elders -> people results in heavy information loss. Tablets, laws, commandments, and an entire cultural framework (priests, festivals, tabernacle) is produced to minimize entropy across spacetime. This is equivalent to a founder realizing that pure explanation isn't enough—they need mechanisms (company culture, processes, incentives, storytelling) to keep the vision intact. His successor, Joshua, carries the mission forward, but over generations, corruption and reinterpretation creep in, as expected. Looking at the many interpretations of that original vision today, it's obvious that vision dilution is inevitable but it is remarkable how strong a vision can be, vibrationally aligning the metaphysical plane of billions of people into unified behavioral patterns, which are an emergent effect of that lower-level alignment. What do you think a [reality-distortion field](https://en.wikipedia.org/wiki/Reality_distortion_field) really is—is the product of [Divine Law](https://en.wikipedia.org/wiki/Divine_law)?
