--- a/src/blog-content/28.md
+++ b/src/blog-content/28.md
@@ -1,7 +1,7 @@
 ---
 title: Going Flying
 date: 2025-02-04
-headerImage: /ski.jpg
+headerImage: /ski.png
 imageAuthor: The Spy Who Loved Me
 imageLink: https://www.007.com/spy-loved-ski-chase/
 ---
