--- a/src/blog-content/28.md
+++ b/src/blog-content/28.md
@@ -5,7 +5,7 @@ headerImage: /ski.png
 imageAuthor: The Spy Who Loved Me
 imageLink: https://www.007.com/spy-loved-ski-chase/
 ---
-It's a nice and sunny morning. It's 30 degrees, way warmer than the average ten degree day over the past few weeks. I wake up at 7:00 AM shsrp, much earlier than usual and get straight out of bed. No usual excuses. After brushing and showering while trying not to wake my roommate, I make my way down six stories. I gaze out at Army Tower glistening in the sunlight, the light snow on the roofs and frost on the windows turning the building into something straight out of Harry Potter. 
+It's a nice and sunny morning. It's 30 degrees, way warmer than the average ten degree day over the past few weeks. I wake up at 7:00 AM sharp, much earlier than usual and get straight out of bed. No usual excuses. After brushing and showering while trying not to wake my roommate, I make my way down six stories. I gaze out at Army Tower glistening in the sunlight, the light snow on the roofs and frost on the windows turning the building into something straight out of Harry Potter. 
 
 I bound down the stairs, feeling no pain from brutal leg exercises last week. Walking through the basement of McFaddin Hall, I think about the breakfast I'm about to eat: blueberries and raspberries, hash browns and eggs, milk and honey. I open the heavy old wooden door to the fresh morning, reminding me of the Bay at this time of the year. The ground is slightly puddled.
 
