--- a/src/blog-content/29.md
+++ b/src/blog-content/29.md
@@ -1,7 +1,7 @@
 ---
 title: Mimesis
 date: 2025-02-08
-headerImage: /mimesis.jpg
+headerImage: /mimesis.png
 imageAuthor: Virgil Abloh and Takashi Murakami
 imageLink: https://www.nytimes.com/2018/02/27/fashion/virgil-abloh-takashi-murakami-gagosian-gallery.html
 ---
